Added all the steps to the recipe page

--- a/recipes/BoozyBananaBread.html
+++ b/recipes/BoozyBananaBread.html
@@ -29,5 +29,16 @@
             <li>3 drops amaretto (almond-flavored liqueur)</li>
         </ul>
         <h3>Steps to Prepare</h3>
+            <ul>
+                <h4>Step 1</h4>
+                <ol>Preheat oven to 350 degrees F (175 degrees C). Spray a loaf pan with cooking spray.</ol>
+                <h4>Step 2</h4>
+                <ol>Whisk flour, salt, and baking soda together in a bowl.</ol>
+                <h4>Step 3</h4>
+                <ol>Mix bananas, brown sugar, butter, eggs, almond extract, and amaretto together in a separate bowl. Add flour mixture; mix just until flour is incorporated, about 1 minute. Transfer mixture to the prepared loaf pan.</ol> 
+                <h4>Step 4</h4>
+                <ol>Bake in the preheated oven until a toothpick inserted into the center comes out clean, about 1 hour. Let cool before serving, about 30 minutes.</ol>
+            </ul>
+
     </body>
 </html>
